# jeex

./: ChangeLog  ChangeLog~  Makefile  Makefile.am  Makefile.in  Makefile.original  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  jeex.desktop  jeex.rc
m4/: Makefile  Makefile.am  Makefile.in
plugin/: Makefile  Makefile.am  Makefile.in  Makefile.original  header.h  jeex_hello.c  jeex_hello.h  joiner.c  joiner.h
plugin/.deps/: jeex_hello.Po  joiner.Po
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  Makefile.original  POTFILES  POTFILES.in  el.gmo  el.po  it.gmo  it.po  jeex.pot
src/: Makefile  Makefile.am  Makefile.in  bookmark.c  bookmark.h  edit.c  edit.h  file.c  file.h  general-function.c  general-function.h  header.h  html-export.c  html-export.h  info.c  info.h  logging.c  logging.h  main.c  menu.c  menu.h  notebook-manage.c  notebook-manage.h  plugin.c  plugin.h  preferences.c  preferences.h  search.c  search.h  terminal-actions.c  terminal-actions.h  tools.c  tools.h  view.c  view.h
src/.deps/: bookmark.Po  edit.Po  file.Po  general-function.Po  html-export.Po  info.Po  logging.Po  main.Po  menu.Po  notebook-manage.Po  plugin.Po  preferences.Po  search.Po  terminal-actions.Po  tools.Po  view.Po
