ACLOCAL_AMFLAGS = -I m4

SUBDIRS = m4 po plugin src   

EXTRA_DIST = Makefile.original \
             plugin/Makefile.original \
             po/Makefile.original \
             img/diff.png img/jeex.svg img/list_menu.png img/jeex.png jeex.desktop jeex.rc

imagesdir = $(pkgdatadir)/images
applicationsdir = $(pkgdatadir)/applications
iconsdir = $(pkgdatadir)/icons
images_DATA = img/jeex.png img/diff.png img/jeex.svg img/list_menu.png
applications_DATA = jeex.desktop
icons_DATA = img/jeex.png

sysconf_DATA = jeex.rc

